--- a/DMX512Reciever/DMX512Reciever/MainWindow.xaml
+++ b/DMX512Reciever/DMX512Reciever/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:ports="clr-namespace:System.IO.Ports;assembly=System"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DMX512Reciever"
         mc:Ignorable="d"
@@ -13,6 +14,7 @@
         <Style TargetType="Rectangle">
             <EventSetter Event="Loaded" Handler="Rectangle_Loaded"/>
         </Style>
+        <ObjectDataProvider ObjectType="{x:Type ports:SerialPort}" MethodName="GetPortNames" x:Key="portNames"/>
     </Window.Resources>
     
     <Grid>
@@ -888,15 +890,7 @@
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Label Content="COMポート:" FontSize="10" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
-                    <ComboBox Height="auto" Width="100">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="{Binding ports}" Margin="2.5"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                    <ComboBox ItemsSource="{Binding Source={StaticResource portNames}}" SelectedValue="{Binding pName}" SelectedIndex="0" IsEnabled="{Binding Path=ComportComboboxEnabled}" Height="26"  Width="80" Margin="5,5,5,5" Name="Ports" />
                 </StackPanel>
             </StackPanel>
         </Border>
